# player-service

./: .env  Cargo.toml  README.md
migrations/2017-11-18-160859_create_player/: up.sql
src/: database.rs  lib.rs  main.rs
src/player/: controller.rs  mod.rs  model.rs  persistence.rs  service.rs
