[package]
name = "player_service"
version = "0.1.0"
authors = ["Corka149 <corka149@mailbox.org>"]

[dependencies]
iron = "0.6.0"
router = "0.6.0"
serde = "1.0.20"
serde_json = "1.0.6"
serde_derive = "1.0.20"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"